@@ -15,8 +15,11 @@ namespace Rivet {
   }
 
 
-  void FastJets::_init1(JetAlgName alg, double rparameter, double seed_threshold) {
-    _initBase();
+  // void FastJets::_init1(JetAlgName alg, double rparameter, double seed_threshold) {
+  //   _initBase();
+
+
+  void FastJets::_initJdef(JetAlgName alg, double rparameter, double seed_threshold) {
     MSG_DEBUG("JetAlg = " << alg);
     MSG_DEBUG("R parameter = " << rparameter);
     MSG_DEBUG("Seed threshold = " << seed_threshold);
@@ -37,7 +40,7 @@ namespace Rivet {
       //   string msg = "PxCone currently not supported, since FastJet doesn't install it by default. ";
       //   msg += "Please notify the Rivet authors if this behaviour should be changed.";
       //   throw Error(msg);
-        //_plugin.reset(new fastjet::PxConePlugin(rparameter));
+      //  _plugin.reset(new fastjet::PxConePlugin(rparameter));
       } else if (alg == ATLASCONE) {
         const double OVERLAP_THRESHOLD = 0.5;
         _plugin.reset(new fastjet::ATLASConePlugin(rparameter, seed_threshold, OVERLAP_THRESHOLD));
@@ -62,24 +65,27 @@ namespace Rivet {
   }
 
 
-  void FastJets::_init2(fastjet::JetAlgorithm type,
-                        fastjet::RecombinationScheme recom, double rparameter) {
-    _initBase();
-    _jdef = fastjet::JetDefinition(type, rparameter, recom);
-  }
+  // void FastJets::_init2(fastjet::JetAlgorithm type,
+  //                       fastjet::RecombinationScheme recom, double rparameter)
+  //   : FastJets
+  // {
+
+  //   _initBase();
+  //   _jdef = fastjet::JetDefinition(type, rparameter, recom);
+  // }
 
 
-  void FastJets::_init3(const fastjet::JetDefinition& jdef) {
-    _initBase();
-    _jdef = jdef;
-  }
+  // void FastJets::_init3(const fastjet::JetDefinition& jdef) {
+  //   _initBase();
+  //   _jdef = jdef;
+  // }
 
 
-  void FastJets::_init4(fastjet::JetDefinition::Plugin* plugin) {
-    _initBase();
-    _plugin.reset(plugin);
-    _jdef = fastjet::JetDefinition(_plugin.get());
-  }
+  // void FastJets::_init4(fastjet::JetDefinition::Plugin* plugin) {
+  //   _initBase();
+  //   _plugin.reset(plugin);
+  //   _jdef = fastjet::JetDefinition(_plugin.get());
+  // }
 
 
 
@@ -176,7 +182,7 @@ namespace Rivet {
   Jets FastJets::_jets() const {
     Jets rtn; rtn.reserve(pseudojets().size());
     foreach (const fastjet::PseudoJet& pj, pseudojets()) {
-      rtn.push_back(_makeJetFromPseudoJet(pj));
+      rtn.push_back(_mkJet(pj));
     }
     /// @todo Cache?
     return rtn;
@@ -184,28 +190,28 @@ namespace Rivet {
 
 
   Jet FastJets::trimJet(const Jet &input, const fastjet::Filter &trimmer)const{
-    assert(input.pseudojet().associated_cluster_sequence() == clusterSeq());
+    assert(input.pseudojet().associated_cluster_sequence() == clusterSeq().get());
     PseudoJet pj = trimmer(input);
-    return _makeJetFromPseudoJet(pj);
+    return _mkJet(pj);
   }
 
 
   PseudoJets FastJets::pseudoJets(double ptmin) const {
-    return (clusterSeq() != NULL) ? clusterSeq()->inclusive_jets(ptmin) : PseudoJets();
+    return clusterSeq() ? clusterSeq()->inclusive_jets(ptmin) : PseudoJets();
   }
 
 
-  Jet FastJets::_makeJetFromPseudoJet(const PseudoJet &pj)const{
-    assert(clusterSeq() != NULL);
+  Jet FastJets::_mkJet(const PseudoJet &pj)const{
+    assert(clusterSeq());
 
-    // take the constituents from the cluster sequence, unless the jet was not
+    // Take the constituents from the cluster sequence, unless the jet was not
     // associated with the cluster sequence (could be the case for trimmed jets)
-    const PseudoJets parts = (pj.associated_cluster_sequence() == clusterSeq())?
-    clusterSeq()->constituents(pj): pj.constituents();
+    const PseudoJets parts = (pj.associated_cluster_sequence() == clusterSeq().get())
+      ? clusterSeq()->constituents(pj) : pj.constituents();
 
     vector<Particle> constituents, tags;
     constituents.reserve(parts.size());
-    foreach (const fastjet::PseudoJet& p, parts) {
+    for (const fastjet::PseudoJet& p : parts) {
       map<int, Particle>::const_iterator found = _particles.find(p.user_index());
       // assert(found != _particles.end());
       if (found == _particles.end() && p.is_pure_ghost()) continue; //< Pure FJ ghosts are ok
