@@ -1,3 +1,12 @@
+2016-03-28  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Improvements to FastJets constructors, including specification
+	of optional AreaDefinition as a constructor arg, disabling dodgy
+	no-FS constructors which I suspect don't work properly in the
+	brave new world of automatic ghost tagging, using a bit of
+	judicious constructor delegation, and completing/exposing use of
+	shared_ptr for internal memory management.
+
 2016-03-26  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Remove Rivet/Tools/RivetBoost.hh and Boost references from
